--- a/loginpage.html
+++ b/loginpage.html
@@ -68,7 +68,7 @@ span.psw {
 	</style>
 </head>
 <body>
-<h2>Login Form</h2>
+<h2>Connexion</h2>
 
 <form action="/action_page.php" method="post">
   <div class="imgcontainer">
@@ -76,21 +76,21 @@ span.psw {
   </div>
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <label for="uname"><b>Nom d'utilisateur</b></label>
+    <input type="text" placeholder="Saisissez votre nom d'utilisateur" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <label for="psw"><b>Mot de passe</b></label>
+    <input type="password" placeholder="Saisissez votre mot de passe" name="psw" required>
         
-    <button type="submit">Login</button>
+    <button type="submit">Connexion</button>
     <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
+      <input type="checkbox" checked="checked" name="remember"> Souviens-toi de moi?
     </label>
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <button type="button" class="cancelbtn">Annuler</button>
+    <span class="psw">Oublié <a href="#">mot de passe?</a></span>
   </div>
 </form>
 
