--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
 </head>
 <body> <p> <strong> DOG </strong> </p> <em> Dog is a very lovely, cute animal. It has different types of breed. It is very loyal. </em> <p> It's types are as follows: </p>
 <ol>
-	<li> Shephard </li>
-	<li> Pitbul </li>
-	<li> Pugs </li>
+	<li> husky </li><br>
+<img src="husky.jfif"> <br>
+
+	<li> Pitbul </li><br>
+	<img src="pitbull.jpg" width="275" height="330" ><br>
+
+	<li> Pugs </li><br>
+	<img src="pug.jfif"><br>
 </ol>
 <a href="newfile"> dog </a>
 
 	<br>
-	<p> </p>
-	<img src=dog.jpg>
 
 </body>
 </html>
